@@ -1,2 +1,23 @@
 # Outerwhere
-Just a issue tracker for a Minecraft modpack.
+点[这里](#)查看简体中文版介绍
+
+Outerwhere (a.k.a. Oh The Regions We Haven't Explored) is a NeoForge 1.21.1 modpack with no strict quests or forced objectives. It seamlessly blends technology and adventure elements together while trying to offer a vanilla-like experience.
+
+## What to Expect?
+
+Outerwhere features **Create** as its core technology mod, alongside a rich selection of adventure mods including **Regions Unexplored**, **Oh The Biomes We've Gone**, **The Twilight Forest**, **The Aether**, and **L_Ender's Cataclysm**.
+
+For players who just want to find a beautiful place, build a cozy base, sit back and relax, Outerwhere also includes lifestyle mods like **Farmer's Delight** or **Handcrafted** and so on.
+
+For full mod list, please refers to the Dependencies section on the Files page.
+
+## Q&A
+
+Q: I found a bug / my game just crashed! What should I do?
+
+A: Don't worry. These problems are normal to happen on a modpack. If things break, please head over to [GitHub](https://github.com/XxdMkbMark/Outerwhere) and open an issue. Make sure to include a **detailed description** of the problem and attach the **full log file**, I'll fix it as soon as possible.
+
+
+Q: Why does my frame rate start dropping after playing for a long time?
+
+A: Outerwhere needs a minimum of 6GB of RAM, but 8GB is highly recommended for a smooth experience. Try allocating a bit more memory in your launcher. You can also try to add `-XX:+UseZGC -XX:+ZGenerational` to your JVM arguments for better performance.
